<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Расписание занятий</string>
    <string name="nextlesson">Следующая пара</string>
    <string name="currentLesson">Сейчас</string>
    <string name="nolessons">Сейчас пар нет:)</string>
    <string name="today">Расписание на сегодня</string>
    <string name="week">Расписание на неделю</string>
    <string name="back">Назад</string>
    <string name="desc_activity_next">Следующая пара</string>
    <string name="forward">Вперед</string>
    <string name="data_updated">Данные обновлены</string>

    <string name="pref_label">Настройки</string>
    <string name="pref_notify_label">Уведомления</string>
	<string name="pref_notify_label_on">Включить уведомления</string>
	<string name="pref_notify_label_time">Время уведомлений</string>
	<string name="pref_notify_label_sound">Звук</string>
	<string name="pref_notify_label_vibro">Вибрация</string>
	<string name="pref_notify_label_ondata">Уведомлять об обновлении данных</string>
	<string name="pref_cache_label">Кэш</string>
	<string name="pref_cache_label_auto">Обновлять автоматически</string>
	<string name="pref_cache_label_time">Время обновления</string>
	<string name="pref_interface_label">Отображение</string>	
	<string name="pref_interface_label_needPE">Физическая культура</string>
	<string name="pref_interface_desc_needPE">Отображать физическую культуру</string>
	<string name="pref_interface_label_theme">Тема</string>
	
	<string name="menu_label_exit">Выход</string>
	<string name="menu_label_site">Открыть сайт</string>
	<string name="menu_label_preferences">Настройки</string>

    <string-array name="notifications_time_desc">
        <item>За 10 минут</item>
        <item>За 5 минут</item>
        <item>За 30 минут</item>
        <item>За 1 час</item>
    </string-array>
    
    <string-array name="notifications_time">
        <item>10</item>
        <item>5</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    
    <string-array name="update_time_desc">
        <item>Каждую неделю</item>
        <item>Каждый день</item>
        <item>Каждые 6 часов</item>
        <item>Каждый час</item>
    </string-array>
    
    <string-array name="update_time">
        <item>168</item>
        <item>24</item>
        <item>6</item>
        <item>1</item>
    </string-array>
    
    <string-array name="interface_theme_label">
        <item >Гугл</item>
        <item >Бордовая</item>
    </string-array>
    
	<string-array name="interface_theme_values">
        <item >ThemeGoogle</item>
        <item >ThemeVinous</item>
    </string-array>
    
    <string name="title_activity_other">OtherActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
